feat: 트레이너 프로필