@@ -5,19 +5,20 @@ import com.workout.trainer.domain.Certification;
 import com.workout.trainer.domain.Education;
 import com.workout.trainer.domain.Specialty;
 import com.workout.trainer.domain.Trainer;
+import com.workout.trainer.domain.TrainerSpecialty;
 import com.workout.trainer.domain.Workexperiences;
 import com.workout.trainer.dto.ProfileCreateDto;
 import com.workout.trainer.dto.ProfileResponseDto;
 import com.workout.trainer.repository.AwardRepository;
 import com.workout.trainer.repository.CertificationRepository;
 import com.workout.trainer.repository.EducationRepository;
+import com.workout.trainer.repository.SpecialtyRepository;
 import com.workout.trainer.repository.TrainerRepository;
+import com.workout.trainer.repository.TrainerSpecialtyRepository;
 import com.workout.trainer.repository.WorkexperiencesRepository;
 import jakarta.persistence.EntityNotFoundException;
 import jakarta.transaction.Transactional;
-import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 import org.springframework.stereotype.Service;
@@ -30,111 +31,123 @@ public class TrainerService {
   private final CertificationRepository certificationRepository;
   private final EducationRepository educationRepository;
   private final WorkexperiencesRepository workexperiencesRepository;
+  private final SpecialtyRepository specialtyRepository; // 의존성 추가
+  private final TrainerSpecialtyRepository trainerSpecialtyRepository; // 의존성 추가
 
   public TrainerService(TrainerRepository trainerRepository, AwardRepository awardRepository,
       CertificationRepository certificationRepository, EducationRepository educationRepository,
-      WorkexperiencesRepository workexperiencesRepository) {
+      WorkexperiencesRepository workexperiencesRepository, SpecialtyRepository specialtyRepository,
+      TrainerSpecialtyRepository trainerSpecialtyRepository) {
     this.trainerRepository = trainerRepository;
     this.awardRepository = awardRepository;
     this.certificationRepository = certificationRepository;
     this.educationRepository = educationRepository;
     this.workexperiencesRepository = workexperiencesRepository;
+    this.specialtyRepository = specialtyRepository;
+    this.trainerSpecialtyRepository = trainerSpecialtyRepository;
+  }
+
+
+  public ProfileResponseDto getProfile(Long trainerId) {
+    Trainer trainer = trainerRepository.findById(trainerId)
+        .orElseThrow(() -> new EntityNotFoundException("트레이너를 찾을 수 없습니다. ID: " + trainerId));
+
+    List<Award> awards = awardRepository.findAllByTrainerId(trainerId);
+    List<Certification> certifications = certificationRepository.findAllByTrainerId(trainerId);
+    List<Education> educations = educationRepository.findAllByTrainerId(trainerId);
+    List<Workexperiences> workexperiences = workexperiencesRepository.findAllByTrainerId(trainerId);
+    Set<Specialty> specialties = trainerSpecialtyRepository.findSpecialtiesByTrainerId(trainerId);
+
+    return ProfileResponseDto.from(trainer, awards, certifications, educations, workexperiences,
+        specialties);
   }
 
   @Transactional
   public void createProfile(Long trainerId, ProfileCreateDto requestDto) {
     Trainer trainer = trainerRepository.findById(trainerId)
         .orElseThrow(() -> new EntityNotFoundException("트레이너를 찾을 수 없습니다. ID: " + trainerId));
+    saveProfileDetails(trainer, requestDto);
+  }
 
+  @Transactional
+  public void updateProfile(Long trainerId, ProfileCreateDto requestDto) {
+    Trainer trainer = trainerRepository.findById(trainerId)
+        .orElseThrow(() -> new EntityNotFoundException("트레이너를 찾을 수 없습니다. ID: " + trainerId));
+    deleteProfileDetails(trainerId);
+    saveProfileDetails(trainer, requestDto);
+  }
+
+  @Transactional
+  public void deleteProfile(Long trainerId) {
+    if (!trainerRepository.existsById(trainerId)) {
+      throw new EntityNotFoundException("트레이너를 찾을 수 없습니다. ID: " + trainerId);
+    }
+    deleteProfileDetails(trainerId);
+  }
+
+  private void saveProfileDetails(Trainer trainer, ProfileCreateDto requestDto) {
     trainer.setIntroduction(requestDto.introduction());
+    trainerRepository.save(trainer);
 
+    List<Award> awards = requestDto.awards().stream().map(dto -> dto.toEntity(trainer)).toList();
+    List<Certification> certifications = requestDto.certifications().stream()
+        .map(dto -> dto.toEntity(trainer)).toList();
+    List<Education> educations = requestDto.educations().stream().map(dto -> dto.toEntity(trainer))
+        .toList();
+    List<Workexperiences> workexperiences = requestDto.workExperiences().stream()
+        .map(dto -> dto.toEntity(trainer)).toList();
+
+    awardRepository.saveAll(awards);
+    certificationRepository.saveAll(certifications);
+    educationRepository.saveAll(educations);
+    workexperiencesRepository.saveAll(workexperiences);
+
+    handleSpecialties(trainer, requestDto.specialties());
+  }
+
+  private void deleteProfileDetails(Long trainerId) {
     awardRepository.deleteAllByTrainerId(trainerId);
     certificationRepository.deleteAllByTrainerId(trainerId);
     educationRepository.deleteAllByTrainerId(trainerId);
     workexperiencesRepository.deleteAllByTrainerId(trainerId);
-
-    if (requestDto.awards() != null) {
-      List<Award> awards = requestDto.awards().stream()
-          .map(awardDto -> Award.of(awardDto, trainer))
-          .collect(Collectors.toList());
-      awardRepository.saveAll(awards);
-    }
-
-    if (requestDto.certifications() != null) {
-      List<Certification> certifications = requestDto.certifications().stream()
-          .map(certDto -> Certification.of(certDto, trainer)).collect(Collectors.toList());
-      certificationRepository.saveAll(certifications);
-    }
-
-    if (requestDto.educations() != null) {
-      List<Education> educations = requestDto.educations().stream()
-          .map(eduDto -> Education.of(eduDto, trainer)).collect(Collectors.toList());
-      educationRepository.saveAll(educations);
-    }
-
-    if (requestDto.workExperiences() != null) {
-      List<Workexperiences> workexperiences = requestDto.workExperiences().stream()
-          .map(workDto -> Workexperiences.of(workDto, trainer)).collect(Collectors.toList());
-      workexperiencesRepository.saveAll(workexperiences);
-    }
-
-    trainerRepository.save(trainer);
-  }
-
-  public ProfileResponseDto getProfile(Long trainerId) {
-    Trainer trainer = trainerRepository.findById(trainerId)
-        .orElseThrow(() -> new EntityNotFoundException("트레이너를 찾을 수 없습니다. ID: " + trainerId));
-
-    List<Award> awards = awardRepository.findByTrainerId(trainerId);
-    List<Certification> certifications = certificationRepository.findByTrainerId(trainerId);
-    List<Education> educations = educationRepository.findByTrainerId(trainerId);
-    List<Workexperiences> workExperiences = workexperiencesRepository.findByTrainerId(trainerId);
-    Set<Specialty> specialties = trainer.getSpecialties(); // Trainer 엔티티에서 직접 가져옴
-
-    return ProfileResponseDto.from(trainer, awards, certifications, educations, workExperiences, specialties);
+    // Specialty 관계도 삭제
+    trainerSpecialtyRepository.deleteAllByTrainerId(trainerId);
   }
 
   public List<ProfileResponseDto> getTrainerProfilesByGym(Long gymId) {
-    // 1. gymId로 소속된 모든 트레이너를 한 번의 쿼리로 조회
-    List<Trainer> trainers = trainerRepository.findProfilesByGymId(gymId);
-    if (trainers.isEmpty()) {
-      return Collections.emptyList();
+    List<Trainer> trainers = trainerRepository.findAllByGymId(gymId);
+
+    return trainers.stream()
+        .map(trainer -> getProfile(trainer.getId()))
+        .collect(Collectors.toList());
+  }
+
+  private void handleSpecialties(Trainer trainer, Set<String> specialtyNames) {
+    if (specialtyNames == null || specialtyNames.isEmpty()) {
+      return;
     }
 
+    //기존 db에서
+    Set<Specialty> existingSpecialties = specialtyRepository.findByNameIn(specialtyNames);
+    Set<String> existingNames = existingSpecialties.stream()
+        .map(Specialty::getName)
+        .collect(Collectors.toSet());
 
-    List<Long> trainerIds = trainers.stream()
-        .map(Trainer::getId)
-        .collect(Collectors.toList());
+    Set<Specialty> newSpecialties = specialtyNames.stream()
+        .filter(name -> !existingNames.contains(name))
+        .map(name -> Specialty.builder().name(name).build())
+        .collect(Collectors.toSet());
 
-    // 3. 트레이너 ID 목록(IN 절)을 사용하여 각 프로필 상세 정보들을 한 번의 쿼리로 모두 가져옴
-    List<Award> awards = awardRepository.findByTrainerIdIn(trainerIds);
-    List<Certification> certifications = certificationRepository.findByTrainerIdIn(trainerIds);
-    List<Education> educations = educationRepository.findByTrainerIdIn(trainerIds);
-    List<Workexperiences> workExperiences = workexperiencesRepository.findByTrainerIdIn(trainerIds);
-    // Specialty는 Trainer 엔티티에 @ElementCollection 등으로 매핑되어 있다고 가정,
-    // 이 경우 trainers 조회 시 함께 Eager 또는 Fetch Join으로 가져오는 것이 효율적입니다.
-    // 현재는 개별 엔티티이므로 Trainer 객체에서 직접 가져옵니다.
+    if (!newSpecialties.isEmpty()) {
+      specialtyRepository.saveAll(newSpecialties);
+    }
 
-    // 4. 조회된 상세 정보들을 trainerId를 key로 하는 Map으로 변환하여 조립 준비 (성능 최적화)
-    Map<Long, List<Award>> awardsByTrainerId = awards.stream()
-        .collect(Collectors.groupingBy(award -> award.getTrainer().getId()));
-    Map<Long, List<Certification>> certsByTrainerId = certifications.stream()
-        .collect(Collectors.groupingBy(cert -> cert.getTrainer().getId()));
-    Map<Long, List<Education>> edusByTrainerId = educations.stream()
-        .collect(Collectors.groupingBy(edu -> edu.getTrainer().getId()));
-    Map<Long, List<Workexperiences>> worksByTrainerId = workExperiences.stream()
-        .collect(Collectors.groupingBy(work -> work.getTrainer().getId()));
+    existingSpecialties.addAll(newSpecialties);
 
-    // 5. 트레이너 목록을 순회하며, 메모리에 있는 데이터들을 조합하여 최종 DTO 리스트 생성
-    return trainers.stream()
-        .map(trainer -> ProfileResponseDto.from(
-            trainer,
-            awardsByTrainerId.getOrDefault(trainer.getId(), Collections.emptyList()),
-            certsByTrainerId.getOrDefault(trainer.getId(), Collections.emptyList()),
-            edusByTrainerId.getOrDefault(trainer.getId(), Collections.emptyList()),
-            worksByTrainerId.getOrDefault(trainer.getId(), Collections.emptyList()),
-            trainer.getSpecialties()
-        ))
-        .collect(Collectors.toList());
+    List<TrainerSpecialty> trainerSpecialties = existingSpecialties.stream()
+        .map(specialty -> TrainerSpecialty.builder().trainer(trainer).specialty(specialty).build())
+        .toList();
+
+    trainerSpecialtyRepository.saveAll(trainerSpecialties);
   }
 }
